# vs-code-setup

./: .gitignore  README.md  ch03.sql  ch04.sql  cli-tools-memory.md  install_duckdb.sh  m.db  pyproject.toml  steve_hotkey.ahk  update-project.ps1  user-keybindings.json
agent-docs/: cli-tools-memory.md
src/: main.py
